Fixed overflow issue

--- a/src/app.css
+++ b/src/app.css
@@ -1,17 +1,13 @@
 html,
 body,
-main {
+main,
+#root {
+    display: flex;
+    flex-direction: column;
     height: 100%;
 }
 
-body {
-    display: flex;
-    flex-direction: column;
-}
-
 main {
-    display: flex;
-    flex-direction: column;
     align-items: center;
     justify-content: space-around;
 }
